--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,23 +1,8 @@
 <h2>My heroes</h2>
 <ul class="heroes">
-    <li *ngFor="let hero of heroes" (click)="onSelect(hero)" [class.selected]="hero == selectedHero">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
+    <li *ngFor="let hero of heroes">
+        <a routerLink="/detail/{{hero.id}}">
+            <span class="badge">{{hero.id}}</span> {{hero.name}}
+        </a>
     </li>
 </ul>
-
-<div *ngIf="selectedHero">
-    <h2>{{selectedHero.name | uppercase}} details</h2>
-    <div>
-        <span>id: </span>
-        {{selectedHero.id}}
-    </div>
-    <div>
-        <span>name: </span>
-        {{selectedHero.name}}
-    </div>
-
-    <div>
-        <label for="name">Hero name: </label>
-        <input type="text" id="name" placeholder="name" [(ngModel)]="selectedHero.name" />
-    </div>
-</div>
